# pyllama

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
src/: __init__.py  api.py  app.py  config.py  consumer.py  llm.py  main.py  red_pandas.py  utils.py
